--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:600|Roboto+Condensed&display=swap');
+
+/* font-family: 'Roboto Condensed', sans-serif;
+font-family: 'Raleway', sans-serif; */
+
 .App {
   text-align: center;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .ReactModal__Overlay {
