--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,8 +2,37 @@
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     font-size: 53px;
+    width: 350px;
+    margin: auto;
+    padding: 35px 0;
 }
 
 .app-about {
     font-size: 20px;
+}
+
+.letter {
+    height: 60px;
+    width: 45px;
+    background-color: #009BC2;
+    color: white;
+    font-size: 26px;
+    position: relative;
+    display: inline-block;
+    margin: 0 5px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 8px grey;
+}
+
+.letter:nth-child(even) {
+    background-color: #F95700;
+}
+
+.letter p {
+    position: absolute;
+    top: 0;
+    left: 0;
+    top: -10px;
+    /* left: 16px; */
+
 }
