Add set colors to app

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,7 @@
   max-width: 1000px;
   margin: auto;
   padding: 10px 15px;
-  background-color: #FFFCFF;
+  color: #383838;
 }
 
 .ReactModal__Overlay {
