--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -16,5 +16,6 @@
     text-align: center;
     transition: transform 0.6s;
     transform-style: preserve-3d;
+    border-radius: 4px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
