--- a/src/components/CardFront/CardFront.css
+++ b/src/components/CardFront/CardFront.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    /*Test Color*/
-    background-color: blue;
+    background-color: #5b5a5a;
+    border-radius: 4px;
+    box-shadow: 0px 0px 8px grey;
 }
