--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,11 @@
 .app-title {
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    font-size: 53px;
+    font-size: 40px;
     width: 350px;
     margin: auto;
-    padding: 35px 0;
+    padding-bottom: 35px;
+    color: #50514F;
 }
 
 .app-about {
@@ -17,7 +18,6 @@
     background-color: #009BC2;
     color: white;
     font-size: 26px;
-    position: relative;
     display: inline-block;
     margin: 0 5px;
     border-radius: 4px;
@@ -29,10 +29,5 @@
 }
 
 .letter p {
-    position: absolute;
-    top: 0;
-    left: 0;
-    top: -10px;
-    /* left: 16px; */
-
+    line-height: 10px;
 }
