--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,13 @@
 .app-title {
     font-family: 'Raleway', sans-serif;
+    font-family: 'Walter Turncoat', cursive;
     font-weight: 600;
     font-size: 40px;
     width: 350px;
     margin: auto;
     padding-bottom: 35px;
     color: #50514F;
+    /* text-transform: uppercase; */
 }
 
 .app-about {
