--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @import url('https://fonts.googleapis.com/css?family=Raleway:600|Roboto+Condensed&display=swap'); */
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Walter+Turncoat&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
