--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,5 @@
 .card {
-    background: transparent;
+    /* background: transparent; */
     margin: 10px;
     display: inline-block;
     perspective: 1000px;
@@ -7,6 +7,7 @@
     height: 150px;
     cursor: pointer;
     opacity: 0;
+    transition: transform 0.6s;
 }
 
 .card-container {
@@ -18,4 +19,14 @@
     transform-style: preserve-3d;
     border-radius: 4px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.show {
+    transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    /* -webkit-backface-visibility: hidden; */
+    background: blue;
 }
