--- a/src/components/CardFront/CardFront.css
+++ b/src/components/CardFront/CardFront.css
@@ -6,4 +6,5 @@
     background-color: #5b5a5a;
     border-radius: 4px;
     box-shadow: 0px 0px 8px grey;
+    /* box-shadow: 0px 0px 8px grey; */
 }
