--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,31 +2,31 @@
     /* background: transparent; */
     margin: 10px;
     display: inline-block;
-    perspective: 1000px;
+    /* perspective: 1000px; */
     width: 100px;
     height: 150px;
     cursor: pointer;
-    opacity: 0;
-    transition: transform 0.6s;
+    /* opacity: 0; */
+    /* transition: transform 0.6s; */
 }
 
 .card-container {
-    position: relative;
+    /* position: relative; */
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    border-radius: 4px;
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+    /* background-color: blue; */
+    /* transition: transform 0.6s; */
+    /* transform-style: preserve-3d; */
+    /* border-radius: 4px; */
 }
 
+/* 
 .show {
     transform: rotateY(180deg);
     -ms-transform: rotateY(180deg);
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
-    /* -webkit-backface-visibility: hidden; */
     background-color: #5b5a5a;
-}
+} */
