--- a/src/components/CardBack/CardBack.css
+++ b/src/components/CardBack/CardBack.css
@@ -1,8 +1,8 @@
 .card-back {
-    position: absolute;
     width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
+    height: 150px;
+    background-color: #5b5a5a;
     border-radius: 4px;
     box-shadow: 0px 0px 8px grey;
+    color: white;
 }
