--- a/src/components/CardFront/CardFront.css
+++ b/src/components/CardFront/CardFront.css
@@ -1,10 +1,7 @@
 .card-front {
-    position: absolute;
     width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
+    height: 150px;
     background-color: #5b5a5a;
     border-radius: 4px;
     box-shadow: 0px 0px 8px grey;
-    /* box-shadow: 0px 0px 8px grey; */
 }
