--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,5 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #CBD4C2;
+  background-color: rgb(247, 249, 240);
 }
