--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,32 +1,13 @@
 .card {
-    /* background: transparent; */
     margin: 10px;
     display: inline-block;
-    /* perspective: 1000px; */
     width: 100px;
     height: 150px;
     cursor: pointer;
-    /* opacity: 0; */
-    /* transition: transform 0.6s; */
+    opacity: 0;
 }
 
 .card-container {
-    /* position: relative; */
     width: 100%;
     height: 100%;
-    text-align: center;
-    /* background-color: blue; */
-    /* transition: transform 0.6s; */
-    /* transform-style: preserve-3d; */
-    /* border-radius: 4px; */
 }
-
-/* 
-.show {
-    transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-    background-color: #5b5a5a;
-} */
